--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $light: #e1e4e8;
 $gray: #9eaebb;
 $black: #242424;
+$blackLighter: #343a40;
 $blackViolet: #121429;
 $violet: #4e529a;
 $green: #1d9b4a;
