--- a/src/assets/style/blocks/_commonPageWrapper.scss
+++ b/src/assets/style/blocks/_commonPageWrapper.scss
@@ -86,6 +86,13 @@
       }
     }
 
+    .tileSmallHeadline {
+      color: $blackLighter;
+      font-weight: 700;
+      transition: color $transition1;
+      will-change: color;
+    }
+
     .tileText {
       margin: 5px 0;
       font-size: 16px;
@@ -338,20 +345,16 @@
 
 .inkline.-dark {
   .dappPageWrapper {
-    .balancesList,
-    .transactionsListContainer,
-    .contactsListContainer {
-      //background-color: $bgSecondary;
+    .tileSmallHeadline {
+      color: $white;
     }
-  }
-}
-
-.inkline.-light {
-  .dappPageWrapper {
-    .balancesList,
-    .transactionsListContainer,
-    .contactsListContainer {
-      //background-color: #f7fafc;
+    .orDivider {
+      .line {
+        background-color: transparentize($color: $gray, $amount: 0.5);
+      }
+      .orText {
+        color: transparentize($color: $gray, $amount: 0.3);
+      }
     }
   }
 }
